# c_beb

./: .clang-format  .clangd  .justfile  CMakeLists.txt  README.md
include/: beb.h  beb_ll.h
src/: beb.c  beb_ll.c  content.c  crypto.c  encoding.c  parsing.c  utils.c
tests/: .clangd  debug_test.c  test_main.c  test_vectors.c
